--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,82 @@
+.menu{
+    position: fixed;
+    background: white
+}
 
+.menu-vertical{
+    width: 250px;
+	top: 0;
+	z-index: 1000;
+}
+
+.menu-left{
+    left: -250px;
+}
+
+.menu-left.open{
+    left: 0;
+}
+
+.menu,
+.header-container {
+	-webkit-transition: all .5s ease;
+	-moz-transition: all .5s ease;
+	transition: all .5s ease;
+}
+
+.close{
+    position: absolute;
+    top: 10px;
+    right: 15px;
+}
+
+.location-list{
+    margin-top: 50px;
+}
+
+.sticky-header{
+    position: fixed;
+    top:0;
+    left: 0;
+    right: 0;
+    height: 50px;   
+}
+.hamburger{
+    padding: 12px;
+}
+
+.cursor-pointer{
+    cursor: pointer;
+}
+
+.box-shadow{
+    box-shadow: 0 0.125rem 0.3125rem rgba(0, 0, 0, 0.26);
+}
+
+.text-center{
+    text-align: center;
+}
+
+.d-inline-block{
+    display: inline-block;
+}
+
+.fs-20{
+    font-size: 20px;
+}
+
+.fs-24{
+    font-size: 24px;
+}
+
+.h-100{
+    height: 100%;
+}
+
+.w-80{
+    width: 80%;
+}
+
+.w-10{
+    width: 10%;
+}
