--- a/src/App.css
+++ b/src/App.css
@@ -32,8 +32,16 @@
     position: fixed;
     top:0;
     left: 0;
-    right: 0;
+    width: 100%;
     height: 50px;   
+}
+
+.sticky-footer{
+    position: fixed;
+    bottom:0;
+    left: 0;
+    width: 100%;
+    height: 50px; 
 }
 
 .cursor-pointer{
@@ -42,6 +50,10 @@
 
 .box-shadow{
     box-shadow: 0 0.125rem 0.3125rem rgba(0, 0, 0, 0.26);
+}
+
+.box-shadow-reverse{
+    box-shadow: 0 -0.125rem 0.3125rem rgba(0, 0, 0, 0.26);
 }
 
 .text-center{
@@ -64,6 +76,10 @@
     font-size: 20px;
 }
 
+.fs-12{
+    font-size: 12px;
+}
+
 .h-100{
     height: 100%;
 }
@@ -74,4 +90,12 @@
 
 .w-10{
     width: 10%;
+}
+
+.font-weight-bold{
+    font-weight: bold;
+}
+
+.copyright{
+    line-height: 25px;
 }
