Setup dynamic location items

--- a/src/App.css
+++ b/src/App.css
@@ -119,8 +119,32 @@ body{
     transition: all .5s ease;
 }
 
+.form-control{
+        display: block;
+        width: 100%;
+        margin: 0 auto;
+        padding: .375rem .75rem;
+        line-height: 1.5;
+        color: #495057;
+        background-clip: padding-box;
+        border: 1px solid #ced4da;
+        border-radius: .25rem;
+        transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+        width: 85%;
+}
+
+.border-top{
+    border-top: solid 1px #ccc;
+}
+
 .location-list {
-    margin-top: 50px;
+    margin-top: 25px;
+    list-style: none;
+    padding: 0 30px;
+}
+
+.location-list li{
+    padding: 10px 0;
 }
 
 .sticky-header {
